...
                                GameRowView(game: game)
                            }
                        }.onDelete(perform: deleteActiveGames)
                    }
                }
                if !completedGames.isEmpty {
                    Section("Completed Games") {
                        ForEach(completedGames) {game in
                            NavigationLink(destination: GameView(game: game)) {
                                GameRowView(game: game)
                            }
                        }.onDelete(perform: deleteCompletedGames)
                    }
                }
                if activeGames.isEmpty && completedGames.isEmpty {
                    ContentUnavailableView("No Games Yet",systemImage: "suit.heart.fill", description: Text("Tap + to start tracking a new game"))
                }
            }.navigationTitle("Card Games").toolbar {
                ToolbarItem(placement: .primaryAction) {
                    Button {
                        showingNewGame = true
                    } label: {
                        Label("New Game", systemImage: "plus")
                    }
...
